--- a/EntregaProyectos/Aleatorios/app/src/main/AndroidManifest.xml
+++ b/EntregaProyectos/Aleatorios/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Aleatorios">
         <activity
+            android:name=".DadosActivity"
+            android:exported="true" />
+        <activity
+            android:name=".GanadorActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
