--- a/PokeWorld/app/src/main/AndroidManifest.xml
+++ b/PokeWorld/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pokeworld">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,14 +12,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pokeworld">
         <activity
+            android:name=".pantallas.RegistroActivity"
+            android:exported="true" />
+        <activity
+            android:name=".pantallas.LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".fragments.Juego"
+            android:exported="true"/>
+        <activity
+            android:name=".fragments.Pokedex"
+            android:exported="true"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
