--- a/PokeWorld/app/build.gradle
+++ b/PokeWorld/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -32,7 +33,26 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-firestore:24.0.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //noinspection GradleCompatible,GradleCompatible
+    implementation 'com.android.support:appcompat-v7:24.0.0'
+    //noinspection GradleCompatible,GradleCompatible
+    implementation 'com.android.support:design:24.0.0'
+    //noinspection GradleCompatible,GradleCompatible
+    implementation 'com.android.support:design:24.0.0'
+    //noinspection GradleCompatible,GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:24.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+
 }
