--- a/PokeWorld/app/build.gradle
+++ b/PokeWorld/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+
 }
 
 android {
@@ -30,6 +31,8 @@ android {
 
 dependencies {
 
+    implementation 'com.google.firebase:firebase-bom:29.1.0'
+
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -52,6 +55,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:24.0.0'
 
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.google.gms:google-services:4.3.10'
 
 
 
